# buttongame3-desktop

./: LICENSE  README.md  go.mod  index.html  lastest.json  main.go  package-lock.json  package.json  wails.json
frontend/: index.html
frontend/src/: main.js
src/: 404.html  LICENSE  README.md  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/res/3d/: 3D_1.blend  LogoOnly.blend  LogoOnly.blend1
src/res/images/: 3D_1.blend  3D_1.blend1  3D_2.blend  3D_2.blend1  achievement-icon.psd  cursor.psd  design.psd
src/res/images/achievements/: 100Completion.af  20Basic.psd  AllLevels.psd  Basic.psd  ChoosesYOU.psd  Clicker.psd  Easily.psd  Job.psd  Match.psd  Message.psd  NoArrow.psd  NoSkip.psd  NoSkipping.af  Password.psd  Refresh.psd  Robot.psd  Skip.psd  Tip.psd  Update.psd  Welcome.psd  hidden-achievement-icon.af
src/res/images/captcha/: checked.psd
src/res/images/icons/: button-game-icon.psd  close-icon.psd  fullscreen-icon.af  (+5 more)
src/src/css/: main.css
src/src/data/: achievements.json  levels.json
src/src/html/: qr25.html  whatsnew.html
src/src/js/: levelsManager.js  main.js
src/src/levels/: !Example.html  0.html  1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  30.html  31.html  32.html  33.html  34.html  35.html  36.html  37.html  38.html  39.html  4.html  40.html  41.html  42.html  43.html  (+13 more)
(+14 files in other folders)
